# CRC-Bruteforcer

./: CMakeLists.txt  README.md  WorkerInstruction.hpp  main.cpp
.github/workflows/: cmake.yml
